Corrects homepage search z-index and form actions for 403 and 404 pages

--- a/css/global.scss
+++ b/css/global.scss
@@ -3583,6 +3583,7 @@ input[type="text"]::placeholder {
         background-position: center;
         background-size: 30px 30px;
         background-image: url(../images/SH5syLP.png);
+        z-index: 9;
       }
     }
   }
